feat: add new actions content

--- a/src/template/Actions/ourActions.ejs
+++ b/src/template/Actions/ourActions.ejs
@@ -46,6 +46,24 @@
       image: "travaux-ajk-generaliste-2-thumbnail",
       title: "2ème phase de construction du pôle généraliste",
       content: "Pôle généraliste"
+    },
+    {
+      anchor: "portfolioModal9",
+      image: "travaux-ajk-specialiste-thumbnail",
+      title: "Construction du pôle spécialiste",
+      content: "Pôle spécialiste"
+    },
+    {
+      anchor: "portfolioModal10",
+      image: "travaux-ajk-logement-thumbnail",
+      title: "Construction du logement du personnel médical",
+      content: "Logement des médecins"
+    },
+    {
+      anchor: "portfolioModal11",
+      image: "fret-medical-thumbnail",
+      title: "Expédition et Reception du conteneur de fret médical",
+      content: "Dons d'équipements médicaux"
     }
   ]  _%>
   <%_ const portfolioTimeLine = [
@@ -100,6 +118,27 @@
       date: "Juillet 2020",
       title: "2ème phase de construction du pôle généraliste",
       content: "Pôle Généraliste"
+    },
+    {
+      class: "timeline",
+      image: "ajk-specialiste-actions",
+      date: "Février 2021",
+      title: "Construction du pôle spécialiste",
+      content: "Pôle Spécialiste"
+    },
+    {
+      class: "timeline-inverted",
+      image: "ajk-logement-actions",
+      date: "Mai 2021",
+      title: "Construction du logement du personnel médical",
+      content: "Logement des médecins"
+    },
+    {
+      class: "timeline",
+      image: "fret-medical-actions",
+      date: "Octobre 2023",
+      title: "Expédition et Reception du conteneur de fret médical",
+      content: "Dons d'équipements médicaux"
     }
   ] _%>
   <section class="bg-light parralax-section" id="portfolio">
