--- a/src/template/Modal/modal.ejs
+++ b/src/template/Modal/modal.ejs
@@ -319,3 +319,96 @@
       </div>
     </div>
   </div>
+
+    <!-- Modal 9 -->
+    <div class="portfolio-modal modal fade" id="portfolioModal9" tabindex="-1" role="dialog" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="close-modal" data-dismiss="modal">
+            <div class="lr">
+              <div class="rl"></div>
+            </div>
+          </div>
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-8 mx-auto">
+                <div class="modal-body">
+                  <h2 class="text-uppercase">Construction du pôle spécialiste</h2>
+                  <p class="item-intro text-muted">Pôle Spécialiste</p>
+                  <img class="img-fluid d-block mx-auto lazyload" data-src="images/portfolio/travaux-ajk-specialiste-full.jpg" alt="">
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, quae! Nesciunt ipsa eaque ad recusandae, magni, alias dolorum exercitationem modi a sunt minus cum cumque quasi temporibus! Officia, blanditiis quo.</p>
+                  <ul class="list-inline">
+                    <li>Date: Février 2021</li>
+                  </ul>
+                  <button class="btn btn-primary" data-dismiss="modal" type="button">
+                    <i class="fa fa-times"></i>
+                    Fermer</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Modal 10 -->
+    <div class="portfolio-modal modal fade" id="portfolioModal10" tabindex="-1" role="dialog" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="close-modal" data-dismiss="modal">
+            <div class="lr">
+              <div class="rl"></div>
+            </div>
+          </div>
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-8 mx-auto">
+                <div class="modal-body">
+                  <h2 class="text-uppercase">Construction du logement du personnel médical</h2>
+                  <p class="item-intro text-muted">Logement des médecins</p>
+                  <img class="img-fluid d-block mx-auto lazyload" data-src="images/portfolio/travaux-ajk-logement-full.jpg" alt="">
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, quae! Nesciunt ipsa eaque ad recusandae, magni, alias dolorum exercitationem modi a sunt minus cum cumque quasi temporibus! Officia, blanditiis quo.</p>
+                  <ul class="list-inline">
+                    <li>Date: Mai 2021</li>
+                  </ul>
+                  <button class="btn btn-primary" data-dismiss="modal" type="button">
+                    <i class="fa fa-times"></i>
+                    Fermer</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Modal 11 -->
+    <div class="portfolio-modal modal fade" id="portfolioModal11" tabindex="-1" role="dialog" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="close-modal" data-dismiss="modal">
+            <div class="lr">
+              <div class="rl"></div>
+            </div>
+          </div>
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-8 mx-auto">
+                <div class="modal-body">
+                  <h2 class="text-uppercase">Expédition et Reception du conteneur de fret médical</h2>
+                  <p class="item-intro text-muted">Dons d'équipements médicaux</p>
+                  <img class="img-fluid d-block mx-auto lazyload" data-src="images/portfolio/fret-medical-full.jpg" alt="">
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, quae! Nesciunt ipsa eaque ad recusandae, magni, alias dolorum exercitationem modi a sunt minus cum cumque quasi temporibus! Officia, blanditiis quo.</p>
+                  <ul class="list-inline">
+                    <li>Date: Octobre 2023</li>
+                  </ul>
+                  <button class="btn btn-primary" data-dismiss="modal" type="button">
+                    <i class="fa fa-times"></i>
+                    Fermer</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
