--- a/src/template/Project/ourProject.ejs
+++ b/src/template/Project/ourProject.ejs
@@ -269,7 +269,7 @@
                     <button class="glide__arrow glide__arrow--right" data-glide-dir=">"><i class="fas fa-angle-right"></i></button>
                   </div>
                   <div class="glide__bullets" data-glide-el="controls[nav]">
-                    <%_ for(let k = 0; k < 12; k++) { _%>
+                    <%_ for(let k = 0; k < 11; k++) { _%>
                     <button class="glide__bullet" data-glide-dir="=<%= [k] %>"></button>
                     <%_ } _%>
                   </div>
@@ -315,10 +315,118 @@
                     <button class="glide__arrow glide__arrow--right" data-glide-dir=">"><i class="fas fa-angle-right"></i></button>
                   </div>
                   <div class="glide__bullets" data-glide-el="controls[nav]">
-                    <%_ for(let l = 0; l < 13; l++) { _%>
+                    <%_ for(let l = 0; l < 12; l++) { _%>
                     <button class="glide__bullet" data-glide-dir="=<%= [l] %>"></button>
                     <%_ } _%>
                   </div>
+              </div>
+            </div>
+            <div class="mt-4">
+              <h4 class="service-heading">Pôle Spécialiste</h4>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem dolor cumque blanditiis, minus porro delectus laborum illum accusamus aliquam modi atque, sint tempora nobis vitae exercitationem quasi. Doloribus, odit nobis?</p>
+              <span class="block bold italic mt-3 text-center d-md-none">(Vous pouvez slider les images vers la droite ou la gauche)</span>
+              <div class="glide mt-4">
+                <div data-glide-el="track" class="glide__track">
+                  <ul class="glide__slides">
+                    <li class="glide__slide"><img class="lazyload" data-src="images/new-dispensaire/dispensaire-kakande-ajk-38.JPG"
+                      alt="nouveau dispensaire ajk 38"></li>
+                    <li class="glide__slide"><img class="lazyload" data-src="images/new-dispensaire/dispensaire-kakande-ajk-39.JPG"
+                      alt="nouveau dispensaire ajk 39"></li>
+                    <li class="glide__slide"><img class="lazyload" data-src="images/new-dispensaire/dispensaire-kakande-ajk-40.JPG"
+                      alt="nouveau dispensaire ajk 40"></li>
+                    <li class="glide__slide"><img class="lazyload" data-src="images/new-dispensaire/dispensaire-kakande-ajk-41.JPG"
+                      alt="nouveau dispensaire ajk 41"></li>
+                    <li class="glide__slide"><img class="lazyload" data-src="images/new-dispensaire/dispensaire-kakande-ajk-42.JPG"
+                      alt="nouveau dispensaire ajk 42"></li>
+                    <li class="glide__slide"><img class="lazyload" data-src="images/new-dispensaire/dispensaire-kakande-ajk-43.JPG"
+                      alt="nouveau dispensaire ajk 43"></li>
+                  </ul>
+                </div>
+                <div class="glide__arrows" data-glide-el="controls">
+                  <button class="glide__arrow glide__arrow--left" data-glide-dir="<"><i class="fas fa-angle-left"></i></button>
+                  <button class="glide__arrow glide__arrow--right" data-glide-dir=">"><i class="fas fa-angle-right"></i></button>
+                </div>
+                <div class="glide__bullets" data-glide-el="controls[nav]">
+                  <%_ for(let m = 0; m < 6; m++) { _%>
+                  <button class="glide__bullet" data-glide-dir="=<%= [m] %>"></button>
+                  <%_ } _%>
+                </div>
+              </div>
+            </div>
+            <div class="mt-4">
+              <h4 class="service-heading">Logement du personnel médical</h4>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex accusantium, reiciendis nisi earum magni molestias animi aspernatur nulla sequi accusamus ea quaerat illo, distinctio ducimus veniam. Inventore eaque amet alias!</p>
+              <span class="block bold italic mt-3 text-center d-md-none">(Vous pouvez slider les images vers la droite ou la gauche)</span>
+              <div class="glide mt-4">
+                <div data-glide-el="track" class="glide__track">
+                  <ul class="glide__slides">
+                    <li class="glide__slide"><img class="lazyload" data-src="images/new-dispensaire/dispensaire-kakande-ajk-44.JPG"
+                      alt="nouveau dispensaire ajk 44"></li>
+                    <li class="glide__slide"><img class="lazyload" data-src="images/new-dispensaire/dispensaire-kakande-ajk-45.JPG"
+                      alt="nouveau dispensaire ajk 45"></li>
+                    <li class="glide__slide"><img class="lazyload" data-src="images/new-dispensaire/dispensaire-kakande-ajk-46.JPG"
+                      alt="nouveau dispensaire ajk 46"></li>
+                    <li class="glide__slide"><img class="lazyload" data-src="images/new-dispensaire/dispensaire-kakande-ajk-47.JPG"
+                      alt="nouveau dispensaire ajk 47"></li>
+                    <li class="glide__slide"><img class="lazyload" data-src="images/new-dispensaire/dispensaire-kakande-ajk-48.JPG"
+                      alt="nouveau dispensaire ajk 48"></li>
+                    <li class="glide__slide"><img class="lazyload" data-src="images/new-dispensaire/dispensaire-kakande-ajk-49.JPG"
+                      alt="nouveau dispensaire ajk 49"></li>
+                  </ul>
+                </div>
+                <div class="glide__arrows" data-glide-el="controls">
+                  <button class="glide__arrow glide__arrow--left" data-glide-dir="<"><i class="fas fa-angle-left"></i></button>
+                  <button class="glide__arrow glide__arrow--right" data-glide-dir=">"><i class="fas fa-angle-right"></i></button>
+                </div>
+                <div class="glide__bullets" data-glide-el="controls[nav]">
+                  <%_ for(let n = 0; n < 6; n++) { _%>
+                  <button class="glide__bullet" data-glide-dir="=<%= [n] %>"></button>
+                  <%_ } _%>
+                </div>
+              </div>
+            </div>
+            <div class="mt-4">
+              <h4 class="service-heading">Fret d'équipements médicaux</h4>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla quis quae consectetur numquam quidem voluptas, ab adipisci excepturi aperiam delectus assumenda neque ipsa, obcaecati iure quas fugiat? Eligendi, omnis ipsam.</p>
+              <span class="block bold italic mt-3 text-center d-md-none">(Vous pouvez slider les images vers la droite ou la gauche)</span>
+              <div class="glide mt-4">
+                <div data-glide-el="track" class="glide__track">
+                  <ul class="glide__slides align-items-center">
+                    <li class="glide__slide"><img class="lazyload" data-src="images/new-dispensaire/dispensaire-kakande-ajk-50.jpg"
+                      alt="nouveau dispensaire ajk 50"></li>
+                    <li class="glide__slide"><img class="lazyload" data-src="images/new-dispensaire/dispensaire-kakande-ajk-51.jpg"
+                      alt="nouveau dispensaire ajk 51"></li>
+                    <li class="glide__slide"><img class="lazyload" data-src="images/new-dispensaire/dispensaire-kakande-ajk-52.jpg"
+                      alt="nouveau dispensaire ajk 52"></li>
+                    <li class="glide__slide"><img class="lazyload" data-src="images/new-dispensaire/dispensaire-kakande-ajk-53.jpg"
+                      alt="nouveau dispensaire ajk 53"></li>
+                    <li class="glide__slide"><img class="lazyload" data-src="images/new-dispensaire/dispensaire-kakande-ajk-54.jpg"
+                      alt="nouveau dispensaire ajk 54"></li>
+                    <li class="glide__slide"><img class="lazyload" data-src="images/new-dispensaire/dispensaire-kakande-ajk-55.jpg"
+                      alt="nouveau dispensaire ajk 55"></li>
+                    <li class="glide__slide"><img class="lazyload" data-src="images/new-dispensaire/dispensaire-kakande-ajk-56.jpg"
+                      alt="nouveau dispensaire ajk 56"></li>
+                    <li class="glide__slide"><img class="lazyload" data-src="images/new-dispensaire/dispensaire-kakande-ajk-57.jpg"
+                      alt="nouveau dispensaire ajk 57"></li>
+                    <li class="glide__slide"><img class="lazyload" data-src="images/new-dispensaire/dispensaire-kakande-ajk-58.JPG"
+                      alt="nouveau dispensaire ajk 58"></li>
+                    <li class="glide__slide"><img class="lazyload" data-src="images/new-dispensaire/dispensaire-kakande-ajk-59.JPG"
+                      alt="nouveau dispensaire ajk 59"></li>
+                    <li class="glide__slide"><img class="lazyload" data-src="images/new-dispensaire/dispensaire-kakande-ajk-60.JPG"
+                      alt="nouveau dispensaire ajk 60"></li>
+                    <li class="glide__slide"><img class="lazyload" data-src="images/new-dispensaire/dispensaire-kakande-ajk-61.JPG"
+                      alt="nouveau dispensaire ajk 61"></li>
+                  </ul>
+                </div>
+                <div class="glide__arrows" data-glide-el="controls">
+                  <button class="glide__arrow glide__arrow--left" data-glide-dir="<"><i class="fas fa-angle-left"></i></button>
+                  <button class="glide__arrow glide__arrow--right" data-glide-dir=">"><i class="fas fa-angle-right"></i></button>
+                </div>
+                <div class="glide__bullets" data-glide-el="controls[nav]">
+                  <%_ for(let o = 0; o < 11; o++) { _%>
+                  <button class="glide__bullet" data-glide-dir="=<%= [o] %>"></button>
+                  <%_ } _%>
+                </div>
               </div>
             </div>
           </div>
