--- a/src/template/Actions/ourActions.ejs
+++ b/src/template/Actions/ourActions.ejs
@@ -152,7 +152,7 @@
         <%_ portfolioCard.forEach(card => { _%>
         <div class="col-md-4 col-sm-6 portfolio-item">
           <div class="portfolio-card boxShadow">
-            <a class="portfolio-link" data-toggle="modal" href="#<%= card.anchor %>">
+            <a class="portfolio-link" data-bs-toggle="modal" data-bs-target="#<%= card.anchor %>" href="#<%= card.anchor %>">
               <div class="portfolio-hover">
                 <div class="portfolio-hover-content">
                   <i class="fa fa-plus fa-3x"></i>
