--- a/src/template/Project/ourProject.ejs
+++ b/src/template/Project/ourProject.ejs
@@ -43,7 +43,7 @@
               <span class="d-block bold italic mt-3">Carte du village de Dabankou vue du ciel</span>
             </div>
             <p>
-              <img class="float-md-left responsive-map-img mb-3 mr-md-3 roundbox boxShadow lazyload"
+              <img class="float-md-start responsive-map-img mb-3 me-md-3 roundbox boxShadow lazyload"
                 data-src="images/project/dabankou-map.png" alt="dabankou-map">
               Les habitants du village manquent de moyen ; ils sont généralement agriculteurs et cultivent arachides,
               piments, aubergines,
