--- a/src/template/NavHeader/nav.ejs
+++ b/src/template/NavHeader/nav.ejs
@@ -27,14 +27,14 @@
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
     <div class="container">
       <a class="navbar-brand js-scroll-trigger logo-ajk" href="#page-top" title="logo ajk"></a>
-      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
-        data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse"
+      data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
         aria-label="Toggle navigation">
         Menu
         <i class="fa fa-bars"></i>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav text-uppercase ml-auto">
+        <ul class="navbar-nav text-uppercase ms-auto">
         <%_ navHeader.forEach(item => { _%>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#<%= item.anchor %>"><%= item.nav %></a>
