feat: fix build output name for production

--- a/src/template/Project/ourProject.ejs
+++ b/src/template/Project/ourProject.ejs
@@ -123,12 +123,12 @@
                 </ul>
               </div>
               <div class="glide__arrows" data-glide-el="controls">
-                <button class="glide__arrow glide__arrow--left" data-glide-dir="<"><i class="fas fa-angle-left"></i></button>
-                <button class="glide__arrow glide__arrow--right" data-glide-dir=">"><i class="fas fa-angle-right"></i></button>
+                <button type="button" class="glide__arrow glide__arrow--left" data-glide-dir="<"><i class="fas fa-angle-left"></i></button>
+                <button type="button" class="glide__arrow glide__arrow--right" data-glide-dir=">"><i class="fas fa-angle-right"></i></button>
               </div>
               <div class="glide__bullets" data-glide-el="controls[nav]">
                 <%_ for(let i = 0; i < 3; i++) { _%>
-                <button class="glide__bullet" data-glide-dir="=<%= [i] %>"></button>
+                <button type="button" class="glide__bullet" data-glide-dir="=<%= [i] %>"></button>
                 <%_ } _%>
               </div>
             </div>
@@ -217,12 +217,12 @@
                   </ul>
                 </div>
                 <div class="glide__arrows" data-glide-el="controls">
-                  <button class="glide__arrow glide__arrow--left" data-glide-dir="<"><i class="fas fa-angle-left"></i></button>
-                  <button class="glide__arrow glide__arrow--right" data-glide-dir=">"><i class="fas fa-angle-right"></i></button>
+                  <button type="button" class="glide__arrow glide__arrow--left" data-glide-dir="<"><i class="fas fa-angle-left"></i></button>
+                  <button type="button" class="glide__arrow glide__arrow--right" data-glide-dir=">"><i class="fas fa-angle-right"></i></button>
                 </div>
                 <div class="glide__bullets" data-glide-el="controls[nav]">
                   <%_ for(let j = 0; j < 5; j++) { _%>
-                  <button class="glide__bullet" data-glide-dir="=<%= [j] %>"></button>
+                  <button type="button" class="glide__bullet" data-glide-dir="=<%= [j] %>"></button>
                   <%_ } _%>
                 </div>
               </div>
@@ -265,12 +265,12 @@
                     </ul>
                   </div>
                   <div class="glide__arrows" data-glide-el="controls">
-                    <button class="glide__arrow glide__arrow--left" data-glide-dir="<"><i class="fas fa-angle-left"></i></button>
-                    <button class="glide__arrow glide__arrow--right" data-glide-dir=">"><i class="fas fa-angle-right"></i></button>
+                    <button type="button" class="glide__arrow glide__arrow--left" data-glide-dir="<"><i class="fas fa-angle-left"></i></button>
+                    <button type="button" class="glide__arrow glide__arrow--right" data-glide-dir=">"><i class="fas fa-angle-right"></i></button>
                   </div>
                   <div class="glide__bullets" data-glide-el="controls[nav]">
                     <%_ for(let k = 0; k < 11; k++) { _%>
-                    <button class="glide__bullet" data-glide-dir="=<%= [k] %>"></button>
+                    <button type="button" class="glide__bullet" data-glide-dir="=<%= [k] %>"></button>
                     <%_ } _%>
                   </div>
                 </div>
@@ -311,12 +311,12 @@
                     </ul>
                   </div>
                   <div class="glide__arrows" data-glide-el="controls">
-                    <button class="glide__arrow glide__arrow--left" data-glide-dir="<"><i class="fas fa-angle-left"></i></button>
-                    <button class="glide__arrow glide__arrow--right" data-glide-dir=">"><i class="fas fa-angle-right"></i></button>
+                    <button type="button" class="glide__arrow glide__arrow--left" data-glide-dir="<"><i class="fas fa-angle-left"></i></button>
+                    <button type="button" class="glide__arrow glide__arrow--right" data-glide-dir=">"><i class="fas fa-angle-right"></i></button>
                   </div>
                   <div class="glide__bullets" data-glide-el="controls[nav]">
                     <%_ for(let l = 0; l < 12; l++) { _%>
-                    <button class="glide__bullet" data-glide-dir="=<%= [l] %>"></button>
+                    <button type="button" class="glide__bullet" data-glide-dir="=<%= [l] %>"></button>
                     <%_ } _%>
                   </div>
               </div>
@@ -343,12 +343,12 @@
                   </ul>
                 </div>
                 <div class="glide__arrows" data-glide-el="controls">
-                  <button class="glide__arrow glide__arrow--left" data-glide-dir="<"><i class="fas fa-angle-left"></i></button>
-                  <button class="glide__arrow glide__arrow--right" data-glide-dir=">"><i class="fas fa-angle-right"></i></button>
+                  <button type="button" class="glide__arrow glide__arrow--left" data-glide-dir="<"><i class="fas fa-angle-left"></i></button>
+                  <button type="button" class="glide__arrow glide__arrow--right" data-glide-dir=">"><i class="fas fa-angle-right"></i></button>
                 </div>
                 <div class="glide__bullets" data-glide-el="controls[nav]">
                   <%_ for(let m = 0; m < 6; m++) { _%>
-                  <button class="glide__bullet" data-glide-dir="=<%= [m] %>"></button>
+                  <button type="button" class="glide__bullet" data-glide-dir="=<%= [m] %>"></button>
                   <%_ } _%>
                 </div>
               </div>
@@ -375,12 +375,12 @@
                   </ul>
                 </div>
                 <div class="glide__arrows" data-glide-el="controls">
-                  <button class="glide__arrow glide__arrow--left" data-glide-dir="<"><i class="fas fa-angle-left"></i></button>
-                  <button class="glide__arrow glide__arrow--right" data-glide-dir=">"><i class="fas fa-angle-right"></i></button>
+                  <button type="button" class="glide__arrow glide__arrow--left" data-glide-dir="<"><i class="fas fa-angle-left"></i></button>
+                  <button type="button" class="glide__arrow glide__arrow--right" data-glide-dir=">"><i class="fas fa-angle-right"></i></button>
                 </div>
                 <div class="glide__bullets" data-glide-el="controls[nav]">
                   <%_ for(let n = 0; n < 6; n++) { _%>
-                  <button class="glide__bullet" data-glide-dir="=<%= [n] %>"></button>
+                  <button type="button" class="glide__bullet" data-glide-dir="=<%= [n] %>"></button>
                   <%_ } _%>
                 </div>
               </div>
@@ -419,12 +419,12 @@
                   </ul>
                 </div>
                 <div class="glide__arrows" data-glide-el="controls">
-                  <button class="glide__arrow glide__arrow--left" data-glide-dir="<"><i class="fas fa-angle-left"></i></button>
-                  <button class="glide__arrow glide__arrow--right" data-glide-dir=">"><i class="fas fa-angle-right"></i></button>
+                  <button type="button" class="glide__arrow glide__arrow--left" data-glide-dir="<"><i class="fas fa-angle-left"></i></button>
+                  <button type="button" class="glide__arrow glide__arrow--right" data-glide-dir=">"><i class="fas fa-angle-right"></i></button>
                 </div>
                 <div class="glide__bullets" data-glide-el="controls[nav]">
                   <%_ for(let o = 0; o < 11; o++) { _%>
-                  <button class="glide__bullet" data-glide-dir="=<%= [o] %>"></button>
+                  <button type="button" class="glide__bullet" data-glide-dir="=<%= [o] %>"></button>
                   <%_ } _%>
                 </div>
               </div>
