feat: update text for sections

--- a/src/template/Modal/modal.ejs
+++ b/src/template/Modal/modal.ejs
@@ -313,11 +313,9 @@
               <div class="col-lg-8 mx-auto">
                 <p class="item-intro text-muted">Pôle Généraliste</p>
                 <img class="img-fluid d-block mx-auto lazyload" data-src="images/portfolio/travaux-ajk-generaliste-full.jpg" alt="">
-                <p>La seconde étape est enclenchée ! Forte de cette première expérience, nous avons démarré la 1<sup>ère</sup> phase de
-                  construction du pôle
-                  généraliste. C'est avec entrain que les ouvriers et les jeunes des villages
-                  ont pu mettre en
-                  pratique la formation aux différentes techniques de construction acquises lors du chantier école. Cette phase se terminera par la pose complète des murs et de la toiture.</p>
+                <p>La seconde étape est lancée ! Forts de notre première expérience, nous avons débuté la construction du pôle généraliste.
+                  Les ouvriers et les jeunes des villages ont pu mettre en pratique les techniques de construction apprises lors du chantier école avec enthousiasme.
+                  Cette phase se conclura par l'achèvement des murs et de la toiture.</p>
                 <ul class="list-inline">
                   <li>Date: Janvier 2019</li>
                   <li>Fin: Mai 2020</li>
@@ -356,7 +354,8 @@
                 <div class="col-lg-8 mx-auto">
                   <p class="item-intro text-muted">Pôle Généraliste</p>
                   <img class="img-fluid d-block mx-auto lazyload" data-src="images/portfolio/travaux-ajk-generaliste-2-full.jpg" alt="">
-                  <p>Place à la troisième étape ! Nous avons opéré un changement d’architecture au niveau de la toiture des bâtiments en construction (y compris le pôle pharmacie) pour une plus grande flexibilité. Un petit plus pour ce pôle généraliste : un banc extérieur a été ajouter sous la véranda.</p>
+                  <p>Nous entamons maintenant la troisième étape ! Nous avons modifié l'architecture de la toiture des bâtiments en construction, y compris celle du pôle pharmacie, afin d'offrir une plus grande flexibilité.
+                    De plus, un banc extérieur a été ajouté sous la véranda pour améliorer le pôle généraliste.</p>
                   <ul class="list-inline">
                     <li>Date: Juillet 2020</li>
                   </ul>
@@ -394,7 +393,8 @@
                 <div class="col-lg-8 mx-auto">
                   <p class="item-intro text-muted">Pôle Spécialiste</p>
                   <img class="img-fluid d-block mx-auto lazyload" data-src="images/portfolio/travaux-ajk-specialiste-full.jpg" alt="">
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, quae! Nesciunt ipsa eaque ad recusandae, magni, alias dolorum exercitationem modi a sunt minus cum cumque quasi temporibus! Officia, blanditiis quo.</p>
+                  <p>Les travaux du pôle spécialiste ont commencé. Ce pôle comprendra une future salle de consultation pour les enfants, une salle de gynécologie,
+                    ainsi qu'une salle de formation destinée à sensibiliser la population aux problématiques d'hygiène et de santé.</p>
                   <ul class="list-inline">
                     <li>Date: Février 2021</li>
                   </ul>
@@ -432,7 +432,7 @@
                 <div class="col-lg-8 mx-auto">
                   <p class="item-intro text-muted">Logement des médecins</p>
                   <img class="img-fluid d-block mx-auto lazyload" data-src="images/portfolio/travaux-ajk-logement-full.jpg" alt="">
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, quae! Nesciunt ipsa eaque ad recusandae, magni, alias dolorum exercitationem modi a sunt minus cum cumque quasi temporibus! Officia, blanditiis quo.</p>
+                  <p>Pour améliorer le confort du personnel médical qui travaillera dans le futur centre de santé, nous avons construit un logement qui leur est exclusivement réservé.</p>
                   <ul class="list-inline">
                     <li>Date: Mai 2021</li>
                   </ul>
@@ -470,7 +470,8 @@
                 <div class="col-lg-8 mx-auto">
                   <p class="item-intro text-muted">Dons d'équipements médicaux</p>
                   <img class="img-fluid d-block mx-auto lazyload" data-src="images/portfolio/fret-medical-full.jpg" alt="">
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, quae! Nesciunt ipsa eaque ad recusandae, magni, alias dolorum exercitationem modi a sunt minus cum cumque quasi temporibus! Officia, blanditiis quo.</p>
+                  <p>L’AJK a reçu un don exceptionnel de l’association P.H.A.M.M.
+                    Grâce à leur soutien et à leur générosité, nous avons pu obtenir un conteneur de 40 pieds rempli de matériel médical destiné à notre nouveau centre de santé à Dabankou.</p>
                   <ul class="list-inline">
                     <li>Date: Octobre 2023</li>
                   </ul>
