--- a/src/template/Project/ourProject.ejs
+++ b/src/template/Project/ourProject.ejs
@@ -229,11 +229,9 @@
               <div class="mt-4">
                 <h4 class="service-heading">Pôle Généraliste</h4>
                 <p class="bold">1<sup>ère</sup> phase</p>
-                <p>La seconde étape est enclenchée ! Fort de cette première expérience, nous avons démarré la 1<sup>ère</sup> de construction
-                  du pôle
-                  généraliste. C'est avec entrain que les ouvriers et les jeunes des villages ont
-                  pu mettre en
-                  pratique la formation aux différentes techniques de construction acquises lors du chantier école. Cette phase se terminera par la pose complète des murs et de la toiture.</p>
+                <p>La seconde étape est lancée ! Forts de notre première expérience, nous avons débuté la construction du pôle généraliste.
+                  Les ouvriers et les jeunes des villages ont pu mettre en pratique les techniques de construction apprises lors du chantier école avec enthousiasme.
+                  Cette phase se conclura par l'achèvement des murs et de la toiture.</p>
                 <span class="block bold italic mt-3 text-center d-md-none">(Vous pouvez slider les images vers la droite ou la gauche)</span>
                 <div class="glide mt-4">
                   <div data-glide-el="track" class="glide__track">
@@ -275,9 +273,8 @@
                   </div>
                 </div>
                 <p class="mt-4 bold">2<sup>ème</sup> phase</p>
-                <p>Place à la troisième étape ! Nous avons opéré un changement d’architecture au niveau de la toiture des bâtiments en construction 
-                  (y compris le pôle pharmacie) pour une plus grande flexibilité.
-                  Un petit plus pour ce pôle généraliste : un banc extérieur a été ajouter sous la véranda.</p>
+                <p>Nous entamons maintenant la troisième étape ! Nous avons modifié l'architecture de la toiture des bâtiments en construction, y compris celle du pôle pharmacie, afin d'offrir une plus grande flexibilité.
+                  De plus, un banc extérieur a été ajouté sous la véranda pour améliorer le pôle généraliste.</p>
                 <span class="block bold italic mt-3 text-center d-md-none">(Vous pouvez slider les images vers la droite ou la gauche)</span>
                 <div class="glide mt-4">
                   <div data-glide-el="track" class="glide__track">
@@ -323,7 +320,8 @@
             </div>
             <div class="mt-4">
               <h4 class="service-heading">Pôle Spécialiste</h4>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem dolor cumque blanditiis, minus porro delectus laborum illum accusamus aliquam modi atque, sint tempora nobis vitae exercitationem quasi. Doloribus, odit nobis?</p>
+              <p>Les travaux du pôle spécialiste ont commencé. Ce pôle comprendra une future salle de consultation pour les enfants, une salle de gynécologie,
+                ainsi qu'une salle de formation destinée à sensibiliser la population aux problématiques d'hygiène et de santé.</p>
               <span class="block bold italic mt-3 text-center d-md-none">(Vous pouvez slider les images vers la droite ou la gauche)</span>
               <div class="glide mt-4">
                 <div data-glide-el="track" class="glide__track">
@@ -355,7 +353,7 @@
             </div>
             <div class="mt-4">
               <h4 class="service-heading">Logement du personnel médical</h4>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex accusantium, reiciendis nisi earum magni molestias animi aspernatur nulla sequi accusamus ea quaerat illo, distinctio ducimus veniam. Inventore eaque amet alias!</p>
+              <p>Pour améliorer le confort du personnel médical qui travaillera dans le futur centre de santé, nous avons construit un logement qui leur est exclusivement réservé.</p>
               <span class="block bold italic mt-3 text-center d-md-none">(Vous pouvez slider les images vers la droite ou la gauche)</span>
               <div class="glide mt-4">
                 <div data-glide-el="track" class="glide__track">
@@ -387,7 +385,8 @@
             </div>
             <div class="mt-4">
               <h4 class="service-heading">Fret d'équipements médicaux</h4>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla quis quae consectetur numquam quidem voluptas, ab adipisci excepturi aperiam delectus assumenda neque ipsa, obcaecati iure quas fugiat? Eligendi, omnis ipsam.</p>
+              <p>L’AJK a reçu un don exceptionnel de l’association P.H.A.M.M.
+                Grâce à leur soutien et à leur générosité, nous avons pu obtenir un conteneur de 40 pieds rempli de matériel médical destiné à notre nouveau centre de santé à Dabankou.</p>
               <span class="block bold italic mt-3 text-center d-md-none">(Vous pouvez slider les images vers la droite ou la gauche)</span>
               <div class="glide mt-4">
                 <div data-glide-el="track" class="glide__track">
