--- a/src/template/Support/supportUs.ejs
+++ b/src/template/Support/supportUs.ejs
@@ -34,9 +34,9 @@
             Ou par téléphone – Responsable Partenariat au 06.15.37.29.52
         </div>
         <div class="col-lg-12">
-          <h3 class="section-subheading text-muted">Comment adhérer ? </h3>
+          <h3 class="section-subheading text-muted">Comment adhérer ? </h3>
           <p>Pour adhérer et faire partie de l'aventure, vous devez remplir le formulaire ci-dessous et l'envoyer à
-            l'adresse suivante :</p>
+            l'adresse suivante&nbsp;:</p>
           <p>
             <span class="fa-stack fa-lg">
               <i class="fa fa-circle fa-stack-2x text-primary"></i>
@@ -60,21 +60,13 @@
         </div>
         <div class="col-lg-12">
           <h3 class="section-subheading text-muted">Faire un don</h3>
-          <p>Pourquoi faire un don ? Parce que la santé est le trésor de la vie ! A Kakande, la population souffre
+          <p>Pourquoi faire un don ? Parce que la santé est le trésor de la vie ! A Kakande, la population souffre
             depuis trop longtemps
             du manque d’infrastructure sanitaire convenable. Participer et soutenez-nous dans cette aventure
             humanitaire, qui permettra
             de changer la vie de plus de 7000 personnes sans compter les villages alentours.
           </p>
           <p>Pour faire un don à l'<strong>ASSOCIATION DES JEUNES DE KAKANDÉ</strong>,</p>
-          <hr/>
-          <p class="bold">Via HelloAsso</p>
-          <p>Cliquez sur le bouton ci-dessous pour faire un don via HelloAsso</p>
-          <div class="text-center mt-5">
-            <a href="https://www.helloasso.com/associations/association-des-jeunes-de-kakande/formulaires/1/widget" class="btn btn-primary btn-xl text-uppercase" target="_blank">
-              Faire un don
-            </a>
-          </div>
           <hr/>
           <div class="row mt-5">
             <div class="col-lg-6 text-center">
